# Orcish

./: Cargo.toml  LICENSE  README.md
crates/Orcish/: Cargo.toml
crates/Orcish/src/: config.rs  endpoints.rs  injector.rs  main.rs  models.rs  registry.rs  server.rs
crates/core-contract/src/: human_shell.rs
crates/orchestration/src/: lib.rs
src/: config.rs  endpoints.rs  injector.rs  main.rs  models.rs  registry.rs  server.rs
