[package]
name = "llm-orchestrator-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Human-Integrated-Technology LLM Orchestrator Node"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
once_cell = "1.19"
anyhow = "1.0"
config = "0.14"
uuid = { version = "1.8", features = ["v4", "serde"] }
urlencoding = "2.1"
