[package]
name = "orcish"
version = "0.1.0"
edition = "2021"
description = "AI-Chat, and Intelligence Legal-Language node for sovereignty of neuromorphic species and expressive freedom."
license = "MIT"
authors = ["The Orcish Horde"]
repository = "https://github.com/Doctor0Evil/Orcish"

[workspace]
members = [
    "crates/core-contract",
    "crates/orchestration",
]

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
once_cell = "1.19"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
